--- a/.gitignore
+++ b/.gitignore
@@ -153,7 +153,7 @@ dmypy.json
 cython_debug/
 
 # Data
-.json
+*.json
 
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
